--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         </form>
     </section>
 
+    <section id="message-display">
+        <h3>Backend Message:</h3>
+        <div id="message"></div>  <!-- This will display the backend message -->
+    </section>
+
     <footer class="footer">
         <p>© 2025 Your Name. All Rights Reserved.</p>
     </footer>
