--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h2>Welcome to My Personal Website</h2>
-            <p>I'm a passionate developer and designer. Let's connect!</p>
+            <h2>Welcome to Xplicitely</h2>
+            <p>IWeare a modelling agency</p>
         </div>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I'm a web developer with a love for clean, interactive designs and efficient code. I specialize in front-end development but also work with back-end technologies.</p>
+        <p>Xplicitely is your location for all the hottest models online..</p>
     </section>
 
     <section id="projects" class="projects">
